3rdYear/2ndSemester/Compiladores/P/aula2/bloco2/b2_03/Calculator.g4
grammar Calculator;

program:
        stat* EOF
        ;

stat:   expr? NEWLINE
        ;

expr: 
        expr op = ('*'|'/'|'%') expr #ExprMultiDivMod
    |   expr op = ('+'|'-') expr     #ExprAddSub
    |   Integer                      #ExprInteger
    |   '(' expr ')'                 #ExprParent
    ;

Integer: [0-9]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
COMMENT: '#' .*? '\n' -> skip;
